# blackpill-usb-pwdstore

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build  build.rs  memory-black_pill.x  memory-blue_pill.x  memory-nucleo_f411.x  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: climenu.rs  lib.rs  main.rs  pwdstore.rs  spi_memory.rs
