[package]
name = "blackpill-usb-pwdstore"
version = "0.1.2"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "USB Password Trove for BlackPill card (stm32f411)"
repository = "https://github.com/sjm42/blackpill-usb-pwdstore"
readme = "README.md"
keywords = ["usb", "password", "embedded", "blackpill", "stm32"]
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = ["black_pill"]
black_pill = ["stm32f4xx-hal"]

[dependencies.stm32f4xx-hal]
optional = true
version = "0.13.2"
features = ["rt", "stm32f411", "usb_fs"]
# git = "https://github.com/stm32-rs/stm32f4xx-hal.git"

[dependencies]
alloc-cortex-m = "0.4"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
embedded-hal = "0.2"
fugit = "0.3"
menu = "0.3"
no-std-compat = { version = "0.4", features = ["alloc"] }
panic-halt = "0.2"
rand = { version = "0.8", default-features = false, features = ["std_rng"] }
sha2 = { version = "0.10", default-features = false }
privatebox = "0.1"
spi-memory = { git = "https://github.com/sjm42/spi-memory.git" }
stm32-usbd = "0.6"
systick-monotonic = "1.0"
usb-device = "0.2"
usbd-serial = "0.1"


# this lets you use `cargo fix`!
#[[bin]]
#name = "blackpill-usb-pwdstore"
#test = false
#bench = false

# identical profiles haha

[profile.release]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = false     # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations

[profile.dev]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations

[build-dependencies]
build-data = "0.1"

# EOF
