# Cargo.toml

[package]
name = "blackpill-usb-pwdstore"
version = "0.2.0"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "USB Password Trove for BlackPill card (stm32f411)"
repository = "https://github.com/sjm42/blackpill-usb-pwdstore"
readme = "README.md"
keywords = ["usb", "password", "embedded", "blackpill", "stm32"]
license = "MIT OR Apache-2.0"
edition = "2024"


[features]
default = ["black_pill"]
black_pill = ["stm32f4xx-hal"]


[dependencies.stm32f4xx-hal]
optional = true
version = "0.23"
features = ["stm32f411", "usb_fs"]


[dependencies]
alloc-cortex-m = "0.4"
bitflags = "2"
cortex-m = "0.7"
cortex-m-rt = "0.7"
rtic = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2", features = ["cortex-m-systick"] }
rtic-sync = "1"
embedded-hal = "1"
embedded-cli = "0.2"
embedded-io = "0.6"
panic-reset = "0.1"
no-std-compat = { version = "0.4", features = ["alloc"] }
rand = { version = "0.9", default-features = false, features = ["std_rng"] }
sha2 = { version = "0.10", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
usb-device = "0.3"
usbd-serial = "0.2"

# identical profiles haha

[profile.release]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = false     # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations

[profile.dev]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations


[build-dependencies]
anyhow = "1"
build-data = "0.3"

# EOF
